--- a/Client-side form validation.css
+++ b/Client-side form validation.css
@@ -1,12 +1,19 @@
 * {
   box-sizing: border-box;
 }
+body{
+  background-color: lightgrey;
+}
 #cont{
   max-width: 800px;
-  /*box-shadow: 1px 1px 5px black;*/
-  padding: 10px;
-  /*border-radius: 10px;*/
-  margin-top: 10px;
+  /*box-shadow: 0.5px 0.5px 80px black;*/
+  padding: 20px;
+  border-radius: 10px;
+  border-width: 1px;
+  border-style: solid;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background-color: white;
 }
 
 .rtag{
@@ -39,4 +46,19 @@
 
 .alerter{
   display: none;color: red;font-size: 12px;
+}
+
+
+
+@media screen and (max-width: 600px) {
+  body{
+    zoom:80%;
+    background-color: white;
+  }
+  #cont{
+  box-shadow: 0px 0px;  
+  margin: 0px;
+  border-radius: 0px;
+  border-width: 0px;
+  }
 }
